# gams-lsp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LSP_EXPLAINED.md  README.md  TODO.md  tree-sitter-gams
client/: .vscodeignore  language-configuration.json  package-lock.json  package.json
client/src/: extension.ts
client/syntaxes/: gams.tmLanguage.json
precompiler/: Cargo.toml  Todo.md
precompiler/src/: evaluator.rs  lexer.rs  lib.rs  types.rs
precompiler/tests/: evaluator.rs  lexer.rs
precompiler/tests/fixtures/: double_dollar.gms  eval_examples.gms  if_conditions.gms  ifthen_block.gms  ifthen_tagged.gms  macro_multiline.gms  mixed.gms  nested_tagged_ifthen.gms  simple_body.gms
server/: Cargo.toml  build.rs
server/src/: backend.rs  document.rs  features.rs  language.rs  main.rs  store.rs  symbols.rs
