[package]
name = "gams-lsp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gams-lsp-server"
path = "src/main.rs"

[dependencies]
gams-precompiler = { path = "../precompiler" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.24"
regex = "1"
ropey = "1"
dashmap = "6"

[build-dependencies]
cc = "1"
